# tacacs_server

./: .bandit  .dockerignore  .env.example  .env.https  .gitignore  .gitleaks.toml  .grype.yaml  .mutmut-cache  .mutmut.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FAQ.md  LICENSE  Makefile  OKTA_OAUTH_IMPLEMENTATION.md  QUICK_START_OAUTH.md  README.md  SECURITY.md  TEST_STANDARDS.md  alembic.ini  bandit.yml  cli.py  conftest.py  diagnose_routes.py  docker-compose.yml  insomnia.json  main.py  mypy.ini  okta_test_data.json  pyproject.toml  pytest.ini  verify_test_setup.py
.github/: FUNDING.yml
.github/workflows/: https-openscap-scan.yml  quality_checks.yml  ruff.yml
.hypothesis/constants/: 01f72e2d62035e36  02fda205782f1dab  0948d9296b311b53  0a7af886cb8100e7  0ff8653e4c151895  108619b93e27b64f  1b8697d2bd9fea7e  1d8c56777896a771  2046a24674e8559c  24ff025cf73f3df7  2533532345010b06  2e1e35f727bf68fc  2fe9e044ba229497  383f3fbfbb51c727  3960a69331574416  4607a6cc22dc2414  480f63f557c47d45  5352806be7b45329  5387941941db8453  57042547b3aee7b0  582626ed68f5c733  613bb92d0bdfcc41  62fe786833117c0a  645955c7a31b505d  6b4d4087de486990  6d8c0ec6f84b1b49  77ff957a077f0445  7989f5237074af82  7d5914cf6b498b1f  7e4d9ff6b57dbc1e  83d63539e4f992f2  84ca61156ade9171  8af9ec530fe11c29  8b458743bbe0db8c  90a8ba13ec8457f6  94edc4157f25ae26  9aa41184b0270c74  a8cef1732d6c7784  b27e7daa81db4c83  c262ce624d6e0383  (+16 more)
.pytest-runtime/server_hjph5zx9/: tacacs_test.conf
.pytest-runtime/server_j8phoupf/: tacacs_test.conf
.pytest-runtime/server_mqwqe58n/: tacacs_test.conf
alembic/: env.py
alembic/versions/: 0001_device_schema_updates.py
config/: okta.generated.conf  okta_oauth_examples.conf  openid_examples.conf  tacacs.aci.ini  tacacs.conf  tacacs.conf#  tacacs.container.ini  users.json
config/examples/: enterprise.ini  minimal.ini  standard.ini
data/: audit_trail.db  devices.db  devices.db-shm  devices.db-wal  local_auth.db  local_auth.db-shm  local_auth.db-wal  local_auth_basic.db  local_auth_cache.db  local_auth_reject.db  tacacs_accounting.db  tacacs_accounting.db-shm  tacacs_accounting.db-wal  test.db  users.db
deploy/aci/: aci-container.yaml  deploy-customer.sh  manage-customers.sh
docker/: Dockerfile.https
docs/: API.md  API_IMPLEMENTATION_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE.md  BACKUP.md  CERTIFICATE-FALLBACK.md  CERTIFICATE-OPTIONS.md  CONFIGURATION.md  CONFIGURATION_ADVANCED.md  CONFIGURATION_EXAMPLES.md  CONTAINER_STARTUP.md  DEPLOYMENT-GUIDE-HTTPS.md  DEPLOYMENT.md  DEVELOPMENT_RULES.md  END_TO_END_TESTING.md  HTTPS-QUICK-REFERENCE.md  HTTPS-README.md  HTTPS-UPDATE-SUMMARY.md  INPUT_VALIDATION.md  INTEGRATIONS.md  LOGGING.md  OKTA.md  OKTA_DUAL_APP_SETUP.md  OKTA_OAUTH_SETUP.md  OPENID_ADMIN_AUTH.md  PROXY_PROTOCOL_FIXES.md  PROXY_PROTOCOL_V2.md  RADIUS_PACKET_FLOW.md  RADIUS_VSA_METADATA.md  SECURITY_FIXES.md  STARTUP_QUICKSTART.md  TACACS_PACKET_FLOW.md  TROUBLESHOOTING.md  backup_restore.md  configuration_management.md  database_schema.md  logging.json
insomnia/: tacacs_server.json
scripts/: audit_hashes.py  cleanup_users.py  example_authorization_test.sh  example_credentials.csv  export_openapi.py  generate_load.py  generate_openapi.py  okta_check.py  okta_selftest.py  print_sarif_summary.js  radius_client.py  run_advanced_tests.py  run_codeql_local.sh  setup_project.py  tacacs_authorization_client.py  tacacs_client.py  test_client.py  validate_config.py
sqlite:/: :memory:
tacacs_server/: adapters.py  admin_cli.py  cli.py  exceptions.py  healthcheck.py  main.py  main_async.py  runtime.py  startup.py
templates/: tacacs_client.py.template
tests/: QUICK_START.md  README.md  __init__.py  conftest.py  conftest_backup_fixtures.py  pytest.ini  test_admin_api.py  test_admin_login_smoke.py  test_admin_session_manager.py  test_admin_tuning_api.py  test_api_functionality.py  test_api_simple.py  test_auth.py  test_authorization.py  test_benchmark.py  test_client_script.py  test_command_authorization_api.py  test_command_authorization_engine.py  test_config_env.py  test_debug_syspath.py  test_device_service.py  test_input_validation.py  test_ldap.py  test_local_user_group_service.py  test_local_user_service.py  test_okta.py  test_radius.py  test_server.py  test_tacacs_authorizer_integration.py  test_web_api_endpoints.py  test_webhooks.py
tools/: okta_prepare_org.py
(+412 files in other folders)
