[tool.poetry]
name = "tacacs-server"
version = "0.1.0"
description = "TACACS+ server and backends"
authors = ["Sascha Schwarz <sascha@providerhoelle.de>"]
readme = "README.md"
packages = [{ include = "tacacs_server" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
requests = "^2.31"
ldap3 = "^2.9"
pyasn1 = "^0.6"
psutil = "^5.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
prometheus-client = "^0.19.0"
aiosqlite = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-cov = "^4.1"
pytest-benchmark = "^4.0"
ruff = "^0.5.0"

[tool.poetry.scripts]
tacacs-server = "tacacs_server.cli:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false