[tool.poetry]
name = "tacacs-server"
version = "0.1.0"
description = "TACACS+ server and backends"
authors = ["Sascha Schwarz <sascha@providerhoelle.de>"]
readme = "README.md"
packages = [{ include = "tacacs_server" }]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
apscheduler = "^3.10.4"
ftputil = "^5.0.0"
paramiko = "^3.5.0"
azure-storage-blob = "^12.19.0"
azure-identity = "^1.15.0"
requests = "^2.32.5"
ldap3 = "^2.9"
pyasn1 = "^0.6.1"
psutil = "^7.1"
fastapi = "^0.120.4"
uvicorn = "^0.24.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.18"
prometheus-client = "^0.23.1"
aiosqlite = "^0.21.0"
bcrypt = "^5.0.0"
pydantic = {extras = ["email"], version = "^2.11.9"}
pyftpdlib = "^2.1.0"
starlette = "^0.49.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-cov = "^4.1"
pytest-benchmark = "^4.0"
bandit = "^1.7.0"
mypy = "^1.0.0"
httpx = "^0.25.0"
pytest-asyncio = "^0.21.0"
requests = "^2.31"
pyjwt = "^2.8.0"
cryptography = "^44.0.1"
sqlalchemy = "^2.0.25"
locust = "^2.20.1"
chaostoolkit = "^1.19.0"
chaostoolkit-kubernetes = "^0.26.0"
pytest-timeout = "^2.2.0"
pact-python = "^1.6.0"
jsonschema = "^4.25.1"
hypothesis = "^6.82.0"
selenium = "^4.15.0"
docker = "^6.1.3"
playwright = "^1.39.0"
pytest-bdd = "^8.1.0"
ruff = "^0.13.3"
schemathesis = "^4.1.4"
mutmut = "^2.4.4"
types-requests = "^2.32.4.20250913"
pyftpdlib = "^2.1.0"
beautifulsoup4 = "^4.14.2"

[tool.poetry.scripts]
tacacs-server = "tacacs_server.cli:main"
tacacs-admin = "tacacs_server.admin_cli:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    # Allow long lines for embedded docs/examples and OpenAPI text
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
markers = ["contract",]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
check_untyped_defs = true
